--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         </div>
     </div>
 
+    <script src="./app-functions.js"></script>
     <script src="./app.js"></script>
 </body>
 </html>
