file initialization for add-edit feature

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 
             <form action="" id="addForm">
                 <input type="text" id="addIdea">
-                <button>Add new idea!</button>
+                <button id="addButton">Add new idea!</button>
             </form>
         </div>
     </div>
-    
+
     <script src="./app-functions.js"></script>
     <script src="./app.js"></script>
 </body>
