modified file structure and add some codes for edit feature

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
     </div>
 
-    <script src="./app-functions.js"></script>
+    <script src="./functions/app-functions.js"></script>
     <script src="./app.js"></script>
 </body>
 </html>
