added initial codes for sort feature

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div>
                 <label for="">Search:</label>
                 <input type="text" id="search">
-                <select name="" id="">
+                <select name="" id="filter">
                     <option value="byEdited">Sort by last edited</option>
                     <option value="byCreated">Sort by recently created</option>
                     <option value="alphabetical">Sort alphabetically</option>
