added create and update time feature

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         </div>
     </div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js"></script>
     <script src="./functions/app-functions.js"></script>
     <script src="./app.js"></script>
 </body>
