--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 <body>
     <div id="app">
         <div class="container">
-            <div>
-                <label for="">Search:</label>
-                <input type="text" id="search">
+            <div class="head">
+                <input type="text" id="search" placeholder="Search">
                 <select name="" id="filter">
                     <option value="byEdited">Sort by last edited</option>
                     <option value="byCreated">Sort by recently created</option>
